adds reflection